> Added typewriter speed on settings, default interval time is 0.015s
> Added pop up notification modal with sound effect on the bottom right when API is switched

Jan 03, 2026
> Changed the AI model from "gemini-2.5-flash-lite-preview-09-2025" to "gemini-flash-lite-latest"
> Changed the notification modal exit from 10s to 5s
> Try to adjust AI system instruction for the AI first message
> Restructure the files
> Added category tabs for easier navigate games category
> Due to said AI response "AI temporarily unavailable due to quota. Please try again later." when the AI text detect the word "quota", "quota exceeded", and "rate limit". So I removed it.

Jan 05, 2026
> Changed category tabs design (Fixed on auto top when scroll down but fix is almost there!)
> Fixed horizontal scrollbar on category tabs not fully completed

Jan 06, 2026
> Added smooth movement of category tabs into top when scroll down
> Added marquee effect on the button "Chat with Jaymantrix AI"

Jan 07, 2026
> Added Vercel Web Analytics
> Changed the structure into React like Vite for routing.
> Adjust BG color on user chat bubbles and chat input

Jan 08, 2026
> Now supported routing link like "/notes" and "/chat"

Jan 09, 2026
> Added vertical marquee design text on both left and right on the website
> Added 10 more API key (20 total)
> Added send sound effect to the AI message
> Adjust slightly on bg color into linear gradient on content
> Redesign note section
> Added smooth ease out of entering each sections
> Fixed AI not response time on 12hrs format

Jan 10, 2026
> Added page "Game Records" to show my game status. The design and function is still WIP
> Jaymantrix AI will start message if it's on the chat section instead of initialize website from the start
> Changed smooth entrance animation
> Can now search filter on the Game Record (No search result display coming soon...)
> min-height content is now 78vh

Jan 11, 2026
> Added loading screen at the start of opening the website