@@ -15,7 +15,7 @@
 
 #chat-section {
   display: none;
-  padding: 12px;
+  padding: 10px;
   width: 100%;
   box-sizing: border-box;
   min-height: 45vh;
@@ -31,7 +31,6 @@
   gap: 18px;
   align-items: stretch;
   justify-content: center;
-  padding: 8px;
   box-sizing: border-box;
   margin: 0 auto;
 }
